2005-07-14 Magnus Hagdorn
 * Makefile.am: beautification
 * erosion_nc_custom.f90: not needed anymore since we use velo coords now
 * erosion_types.f90: removing sediment coordinate system
 * erosion_setup.f90: ditto
 * erosion.f90: ditto
 * erosion_transport.f90: ditto
 * erosion_vars.def: ditto
 * simple_erosion.f90: ditto
 * test_transport.f90: ditto

2005-07-14 Magnus Hagdorn
 * erosion_sediment.f90: new module handling deforming sediment layer
   using Geoffrey's theory.
 * Makefile.am: hook up new module
 * erosion_types.f90: added new type for deforming layer stuff
 * erosion_vars.def: save sediment velocities
 * erosion_transport_type.f90: removed sediment velos
 * erosion_transport.f90: hook up new sediment module, add thickness calcs,
   new routine for interpolation from velo to sed grid
 * erosion.f90: removed sed thickness calcs, hooked up new sediment module
 * erosion_setup.f90: read/display new RTP for sediment stuff
 * configure.in: require glimmer 0.5.3

2005-07-11 Magnus Hagdorn
 * more doc work

2005-07-04 Magnus Hagdorn
 src
 * renamed 2nmo routines to generic transport routines
 * Makefile.am: changed file names
 * erosion_types.f90: changed defaults to reasonable values
 tests
 * Makefile.am: run tests only on make check
 * test_transport.sh: run test_transport only for different grids
 docs
 * updated docs

2005-07-01 Magnus Hagdorn
 * removing semi-Lagrangian routines
 * bumped version to 0.3
 * use today's date in documentation

2005-07-01 Magnus Hagdorn
 * updated NEWS and added date to documentation

2005-07-01 Magnus Hagdorn
 * erosion_trans_lagtype.f90: type for semi-Lagrangian advection solvers,
   moved here from erosion_types.f90
 * erosion_types.f90: removed transport type
 * erosion_transport_fv.f90: initialise sparse matrices here, wrap-up
   transport code in single subroutine
 * erosion_transport_interp.f90: ditto
 * erosion.f90: use new API for calling transport code